--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,81 @@ img {
     color:rgba(247, 240, 240, .6);
     margin-left: 820px;
 }
+.popup_checkbox, .popup {
+    display:none;
+}
+  
+.popup {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
+.popup_content {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: #fff;
+    color:rgb(20, 22, 20);
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    width: 195px;
+    height: 130px;
+}
+  
+.popup_shower {
+    position: fixed;
+    display: block;
+    color: rgb(241, 241, 247);
+    cursor: pointer;
+    text-decoration:none;
+    width: 8%;
+    height: 80px;
+    top: 75%;
+    left:87%;
+    background-color:rgb(250, 250, 250);
+    border-radius: 20%;
+    box-shadow: 3px 3px grey;
+    opacity: 0.9;
+}
+
+.call {
+    color:rgb(5, 3, 3) ;
+    text-align: center;
+    margin-top: 20px;
+}
+  
+.popup_closer {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    color: rgb(1, 3, 0);
+    font-size: 20px;
+    border: 1px solid #999;
+    display: block;
+    width: 20px;
+    height: 20px;
+    line-height: 15px;
+    text-align: center;
+    border-radius: 50%;
+}
+  
+.popup_closer:hover {
+    background-color: rgb(168, 167, 167);
+}
+
+.popup_checkbox:checked + .popup {
+    opacity:1;
+    display: block;
+}
 
 
